---
source: book/tests/snapshot.rs
expression: "from employees\ngroup employee_id (\n  sort month\n  window rolling:12 (\n    derive [trail_12_m_comp = sum paycheck]\n  )\n)\n"
---
from employees
group employee_id (
  sort month
  window rolling:12 (
  derive [trail_12_m_comp = sum paycheck]
)
)



